--- a/backend/package.json
+++ b/backend/package.json
@@ -27,9 +27,12 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.3",
     "@xenova/transformers": "^2.17.2",
+    "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^12.4.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "fs-extra": "^11.3.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "ollama": "^0.6.3",
     "openai": "^6.9.1",
@@ -48,8 +51,10 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
